--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ﻿<!DOCTYPE html>
 <html>
   <head>
-    <title>Peiliang Li's Homepage</title>
+    <title>Home</title>
     <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
     <meta http-equiv="content-type" content="text/html; charset=utf-8"/>
     <meta name="apple-mobile-web-app-capable" content="yes"/>
@@ -81,7 +81,7 @@
         <img id="u6_img" class="img " src="resources/images/transparent.gif"/>
         <!-- Unnamed () -->
         <div id="u7" class="text">
-          <p><span style="color:#434343;">I am Peiliang Li, a second year Ph.D student in </span><span style="color:#5A95BC;">HKUST UAV Group</span><span style="color:#434343;"> at the Robotics Institute of </span><span style="color:#5A95BC;">Hong Kong University of Science and Technology</span><span style="color:#434343;"> supervised by </span><span style="color:#5A95BC;">Prof. Shaojie Shen</span><span style="color:#434343;"> . I am one of the authors of </span><span style="color:#5A95BC;">VINS-Mobile </span><span style="color:#434343;">and </span><span style="color:#5A95BC;">VINS-Mono</span><span style="color:#434343;">, currently the most porpular open-sourced </span><span style="color:#5A95BC;">VIO</span><span style="color:#434343;"> system. During my first Ph.D year, I mainly focus on visual inertial state estimation and its application (UAV navigation, Augmented Reality). After that I employ the 3D geometry methods inspired from VINS to solve the 3D object and ego-motion tracking problem. I received my B.Eng. degree in electrical science and technology from </span><span style="color:#5A95BC;">USTC</span><span style="color:#434343;"> , Hefei, China.</span></p><p><span style="color:#434343;">I'm interested in visual inertial fusion, 3D Computer Vision and Machine Learning with perticular looking for their combination to solve the 3D objects detection, tracking and ego-motion estimation for autonomous driving.</span></p><p><span style="color:#434343;">&nbsp;</span></p><p><span style="color:#434343;">Contact : pliap at connect dot ust dot hk; peiliang.uav at gmail dot com</span></p><p><span style="color:#434343;">Wechat : mystery1221</span></p><p><span style="color:#5A95BC;">[Scholar] [CV] [github]</span></p>
+          <p><span style="color:#434343;">I am Peiliang Li, a second year Ph.D student in </span><span style="color:#5A95BC;">HKUST UAV Group</span><span style="color:#434343;"> at the Robotics Institute of </span><span style="color:#5A95BC;">Hong Kong University of Science and Technology</span><span style="color:#434343;"> supervised by </span><span style="color:#5A95BC;">Prof. Shaojie Shen</span><span style="color:#434343;">. During my first Ph.D year, I mainly focus on visual inertial</span></p><p><span style="color:#434343;">state estimation (</span><span style="color:#5A95BC;">VINS-Mono</span><span style="color:#434343;">, </span><span style="color:#5A95BC;">VINS-Mobile</span><span style="color:#434343;">) and its application (UAV navigation, Augmented Reality). After that I employ</span></p><p><span style="color:#434343;">the 3D geometry methods inspired from VINS to solve the 3D object and ego-motion tracking problem. I received my</span></p><p><span style="color:#434343;">B.Eng. degree in electrical science and technology from </span><span style="color:#5A95BC;">USTC</span><span style="color:#434343;">, Hefei, China.</span></p><p><span style="color:#434343;">&nbsp;</span></p><p><span style="color:#434343;">I'm interested in visual inertial fusion, 3D Computer Vision and Machine Learning with perticularlly looking for their combination to solve the 3D objects detection, tracking and ego-motion estimation for autonomous driving.</span></p><p><span style="color:#434343;">&nbsp;</span></p><p><span style="color:#434343;">Contact : pliap at connect dot ust dot hk; peiliang.uav at gmail dot com</span></p><p><span style="color:#434343;">Wechat : mystery1221</span></p><p><span style="color:#5A95BC;">[Scholar] [CV] [github]</span></p>
         </div>
       </div>
 
@@ -215,98 +215,101 @@
       <div id="u37" class="ax_hot_spot">
       </div>
 
-      <!-- Unnamed (Hot Spot) -->
-      <div id="u38" class="ax_hot_spot">
-      </div>
-
       <!-- Unnamed (Image) -->
-      <div id="u39" class="ax_image">
-        <img id="u39_img" class="img " src="images/home/u39.jpg"/>
+      <div id="u38" class="ax_image">
+        <img id="u38_img" class="img " src="images/home/u38.jpg"/>
         <!-- Unnamed () -->
-        <div id="u40" class="text">
+        <div id="u39" class="text">
           <p><span></span></p>
         </div>
       </div>
 
       <!-- Unnamed (Image) -->
-      <div id="u41" class="ax_image">
-        <img id="u41_img" class="img " src="images/home/u41.jpg"/>
+      <div id="u40" class="ax_image">
+        <img id="u40_img" class="img " src="images/home/u40.jpg"/>
         <!-- Unnamed () -->
-        <div id="u42" class="text">
+        <div id="u41" class="text">
           <p><span></span></p>
         </div>
       </div>
 
       <!-- Unnamed (Image) -->
-      <div id="u43" class="ax_image">
-        <img id="u43_img" class="img " src="images/home/u43.jpg"/>
+      <div id="u42" class="ax_image">
+        <img id="u42_img" class="img " src="images/home/u42.jpg"/>
         <!-- Unnamed () -->
-        <div id="u44" class="text">
+        <div id="u43" class="text">
           <p><span></span></p>
         </div>
       </div>
 
       <!-- Unnamed (Image) -->
-      <div id="u45" class="ax_image">
-        <img id="u45_img" class="img " src="images/home/u45.jpg"/>
+      <div id="u44" class="ax_image">
+        <img id="u44_img" class="img " src="images/home/u44.jpg"/>
         <!-- Unnamed () -->
-        <div id="u46" class="text">
+        <div id="u45" class="text">
           <p><span></span></p>
         </div>
       </div>
 
       <!-- Unnamed (Image) -->
-      <div id="u47" class="ax_image">
-        <img id="u47_img" class="img " src="images/home/u47.jpg"/>
+      <div id="u46" class="ax_image">
+        <img id="u46_img" class="img " src="images/home/u46.jpg"/>
         <!-- Unnamed () -->
-        <div id="u48" class="text">
+        <div id="u47" class="text">
           <p><span></span></p>
         </div>
       </div>
 
       <!-- Unnamed (Image) -->
-      <div id="u49" class="ax_image">
-        <img id="u49_img" class="img " src="images/home/u49.jpg"/>
+      <div id="u48" class="ax_image">
+        <img id="u48_img" class="img " src="images/home/u48.jpg"/>
         <!-- Unnamed () -->
-        <div id="u50" class="text">
+        <div id="u49" class="text">
           <p><span></span></p>
         </div>
       </div>
 
       <!-- Unnamed (Image) -->
-      <div id="u51" class="ax_image">
-        <img id="u51_img" class="img " src="images/home/u51.jpg"/>
+      <div id="u50" class="ax_image">
+        <img id="u50_img" class="img " src="images/home/u50.jpg"/>
         <!-- Unnamed () -->
-        <div id="u52" class="text">
+        <div id="u51" class="text">
           <p><span></span></p>
         </div>
       </div>
 
       <!-- Unnamed (Image) -->
-      <div id="u53" class="ax_image">
-        <img id="u53_img" class="img " src="images/home/u53.jpg"/>
+      <div id="u52" class="ax_image">
+        <img id="u52_img" class="img " src="images/home/u52.jpg"/>
         <!-- Unnamed () -->
-        <div id="u54" class="text">
+        <div id="u53" class="text">
           <p><span></span></p>
         </div>
       </div>
 
       <!-- Unnamed (Image) -->
-      <div id="u55" class="ax_image">
-        <img id="u55_img" class="img " src="images/home/u55.jpg"/>
+      <div id="u54" class="ax_image">
+        <img id="u54_img" class="img " src="images/home/u54.jpg"/>
         <!-- Unnamed () -->
-        <div id="u56" class="text">
+        <div id="u55" class="text">
           <p><span></span></p>
         </div>
       </div>
 
       <!-- Unnamed (Image) -->
-      <div id="u57" class="ax_image">
-        <img id="u57_img" class="img " src="images/home/u57.jpg"/>
+      <div id="u56" class="ax_image">
+        <img id="u56_img" class="img " src="images/home/u56.jpg"/>
         <!-- Unnamed () -->
-        <div id="u58" class="text">
+        <div id="u57" class="text">
           <p><span></span></p>
         </div>
+      </div>
+
+      <!-- Unnamed (Horizontal Line) -->
+      <div id="u58" class="ax_horizontal_line">
+        <img id="u58_start" class="img " src="resources/images/transparent.gif" alt="u58_start"/>
+        <img id="u58_end" class="img " src="resources/images/transparent.gif" alt="u58_end"/>
+        <img id="u58_line" class="img " src="images/home/u58_line.png" alt="u58_line"/>
       </div>
 
       <!-- Unnamed (Horizontal Line) -->
@@ -320,53 +323,46 @@
       <div id="u60" class="ax_horizontal_line">
         <img id="u60_start" class="img " src="resources/images/transparent.gif" alt="u60_start"/>
         <img id="u60_end" class="img " src="resources/images/transparent.gif" alt="u60_end"/>
-        <img id="u60_line" class="img " src="images/home/u60_line.png" alt="u60_line"/>
+        <img id="u60_line" class="img " src="images/home/u59_line.png" alt="u60_line"/>
       </div>
 
       <!-- Unnamed (Horizontal Line) -->
       <div id="u61" class="ax_horizontal_line">
         <img id="u61_start" class="img " src="resources/images/transparent.gif" alt="u61_start"/>
         <img id="u61_end" class="img " src="resources/images/transparent.gif" alt="u61_end"/>
-        <img id="u61_line" class="img " src="images/home/u60_line.png" alt="u61_line"/>
+        <img id="u61_line" class="img " src="images/home/u59_line.png" alt="u61_line"/>
       </div>
 
       <!-- Unnamed (Horizontal Line) -->
       <div id="u62" class="ax_horizontal_line">
         <img id="u62_start" class="img " src="resources/images/transparent.gif" alt="u62_start"/>
         <img id="u62_end" class="img " src="resources/images/transparent.gif" alt="u62_end"/>
-        <img id="u62_line" class="img " src="images/home/u60_line.png" alt="u62_line"/>
-      </div>
-
-      <!-- Unnamed (Horizontal Line) -->
-      <div id="u63" class="ax_horizontal_line">
-        <img id="u63_start" class="img " src="resources/images/transparent.gif" alt="u63_start"/>
-        <img id="u63_end" class="img " src="resources/images/transparent.gif" alt="u63_end"/>
-        <img id="u63_line" class="img " src="images/home/u60_line.png" alt="u63_line"/>
+        <img id="u62_line" class="img " src="images/home/u59_line.png" alt="u62_line"/>
       </div>
 
       <!-- Unnamed (Shape) -->
-      <div id="u64" class="ax_paragraph">
-        <img id="u64_img" class="img " src="resources/images/transparent.gif"/>
+      <div id="u63" class="ax_paragraph">
+        <img id="u63_img" class="img " src="resources/images/transparent.gif"/>
         <!-- Unnamed () -->
-        <div id="u65" class="text">
+        <div id="u64" class="text">
           <p><span>Code</span></p>
         </div>
       </div>
 
       <!-- Unnamed (Shape) -->
-      <div id="u66" class="ax_paragraph">
-        <img id="u66_img" class="img " src="resources/images/transparent.gif"/>
+      <div id="u65" class="ax_paragraph">
+        <img id="u65_img" class="img " src="resources/images/transparent.gif"/>
         <!-- Unnamed () -->
-        <div id="u67" class="text">
+        <div id="u66" class="text">
           <p><span>Code</span></p>
         </div>
       </div>
 
       <!-- Unnamed (Shape) -->
-      <div id="u68" class="ax_paragraph">
-        <img id="u68_img" class="img " src="resources/images/transparent.gif"/>
+      <div id="u67" class="ax_paragraph">
+        <img id="u67_img" class="img " src="resources/images/transparent.gif"/>
         <!-- Unnamed () -->
-        <div id="u69" class="text">
+        <div id="u68" class="text">
           <p><span>Code</span></p>
         </div>
       </div>
