--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
     <link href="resources/css/jquery-ui-themes.css" type="text/css" rel="stylesheet"/>
     <link href="resources/css/axure_rp_page.css" type="text/css" rel="stylesheet"/>
     <link href="data/styles.css" type="text/css" rel="stylesheet"/>
-    <link href="files/home/styles.css" type="text/css" rel="stylesheet"/>
+    <link href="files/peiliang_li_-_hkust_aerial_robotics_group/styles.css" type="text/css" rel="stylesheet"/>
     <script src="resources/scripts/jquery-1.7.1.min.js"></script>
     <script src="resources/scripts/jquery-ui-1.8.10.custom.min.js"></script>
     <script src="resources/scripts/prototypePre.js"></script>
     <script src="data/document.js"></script>
     <script src="resources/scripts/prototypePost.js"></script>
-    <script src="files/home/data.js"></script>
+    <script src="files/peiliang_li_-_hkust_aerial_robotics_group/data.js"></script>
     <script type="text/javascript">
       $axure.utils.getTransparentGifPath = function() { return 'resources/images/transparent.gif'; };
       $axure.utils.getOtherPath = function() { return 'resources/Other.html'; };
@@ -44,7 +44,7 @@
       <div id="u2" class="ax_default paragraph">
         <div id="u2_div" class=""></div>
         <div id="u2_text" class="text ">
-          <p><span style="color:#434343;">I am Peiliang Li, a third year Ph.D student in </span><span style="color:#5A95BC;">HKUST UAV Group</span><span style="color:#434343;"> at the Robotics Institute of </span><span style="color:#5A95BC;">Hong Kong University of Science and Technology</span><span style="color:#434343;"> supervised by </span><span style="color:#5A95BC;">Prof. Shaojie Shen</span><span style="color:#434343;">. During my first Ph.D year, I mainly focus on visual inertial</span></p><p><span style="color:#434343;">state estimation (</span><span style="color:#5A95BC;">VINS-Mono</span><span style="color:#434343;">, </span><span style="color:#5A95BC;">VINS-Mobile</span><span style="color:#434343;">) and its application (UAV navigation, Augmented Reality). After that I employ</span></p><p><span style="color:#434343;">the 3D geometry methods inspired from VINS to solve the 3D object and ego-motion tracking problem. I received my</span></p><p><span style="color:#434343;">B.Eng. degree in electrical science and technology from </span><span style="color:#5A95BC;">USTC</span><span style="color:#434343;">, Hefei, China.</span></p><p><span style="color:#434343;"><br></span></p><p><span style="color:#434343;">I'm interested in visual inertial fusion, 3D Computer Vision and Machine Learning with perticularlly looking for their combination to solve the 3D objects detection, tracking and ego-motion estimation for autonomous driving.</span></p><p><span style="color:#434343;"><br></span></p><p><span style="color:#434343;">Contact : pliap at connect dot ust dot hk; peiliang.uav at gmail dot com</span></p><p><span style="color:#434343;">Wechat : mystery1221</span></p><p><span style="color:#5A95BC;">[Scholar] [CV] [github]</span></p>
+          <p><span style="color:#434343;">I am Peiliang Li, a third-year Ph.D student in </span><span style="color:#5A95BC;">HKUST UAV Group</span><span style="color:#434343;"> at the Robotics Institute of </span><span style="color:#5A95BC;">Hong Kong University of Science and Technology</span><span style="color:#434343;"> supervised by </span><span style="color:#5A95BC;">Prof. Shaojie Shen</span><span style="color:#434343;">. During my first Ph.D year, I mainly focus on visual inertial</span></p><p><span style="color:#434343;">state estimation (</span><span style="color:#5A95BC;">VINS-Mono</span><span style="color:#434343;">, </span><span style="color:#5A95BC;">VINS-Mobile</span><span style="color:#434343;">) and its application (UAV navigation, Augmented Reality). After that I employ</span></p><p><span style="color:#434343;">the 3D geometry methods inspired from VINS to solve the 3D object and ego-motion tracking problem. I received my</span></p><p><span style="color:#434343;">B.Eng. degree in electrical science and technology from </span><span style="color:#5A95BC;">USTC</span><span style="color:#434343;">, Hefei, China.</span></p><p><span style="color:#434343;"><br></span></p><p><span style="color:#434343;">I'm interested in visual inertial fusion, 3D Computer Vision and Machine Learning with perticularlly looking for their combination to solve the 3D objects detection, tracking and ego-motion estimation for autonomous driving.</span></p><p><span style="color:#434343;"><br></span></p><p><span style="color:#434343;">Contact : pliap at connect dot ust dot hk; peiliang.uav at gmail dot com</span></p><p><span style="color:#434343;">Wechat : mystery1221</span></p><p><span style="color:#5A95BC;">[Scholar] [CV] [github]</span></p>
         </div>
       </div>
 
@@ -66,7 +66,7 @@
 
       <!-- Unnamed (Image) -->
       <div id="u5" class="ax_default image">
-        <img id="u5_img" class="img " src="images/home/u5.jpg"/>
+        <img id="u5_img" class="img " src="images/peiliang_li_-_hkust_aerial_robotics_group/u5.jpg"/>
       </div>
 
       <!-- Unnamed (Rectangle) -->
@@ -167,77 +167,77 @@
 
       <!-- Unnamed (Image) -->
       <div id="u23" class="ax_default image">
-        <img id="u23_img" class="img " src="images/home/u23.jpg"/>
+        <img id="u23_img" class="img " src="images/peiliang_li_-_hkust_aerial_robotics_group/u23.jpg"/>
       </div>
 
       <!-- Unnamed (Image) -->
       <div id="u24" class="ax_default image">
-        <img id="u24_img" class="img " src="images/home/u24.jpg"/>
+        <img id="u24_img" class="img " src="images/peiliang_li_-_hkust_aerial_robotics_group/u24.jpg"/>
       </div>
 
       <!-- Unnamed (Image) -->
       <div id="u25" class="ax_default image">
-        <img id="u25_img" class="img " src="images/home/u25.jpg"/>
+        <img id="u25_img" class="img " src="images/peiliang_li_-_hkust_aerial_robotics_group/u25.jpg"/>
       </div>
 
       <!-- Unnamed (Image) -->
       <div id="u26" class="ax_default image">
-        <img id="u26_img" class="img " src="images/home/u26.jpg"/>
+        <img id="u26_img" class="img " src="images/peiliang_li_-_hkust_aerial_robotics_group/u26.jpg"/>
       </div>
 
       <!-- Unnamed (Image) -->
       <div id="u27" class="ax_default image">
-        <img id="u27_img" class="img " src="images/home/u27.jpg"/>
+        <img id="u27_img" class="img " src="images/peiliang_li_-_hkust_aerial_robotics_group/u27.jpg"/>
       </div>
 
       <!-- Unnamed (Image) -->
       <div id="u28" class="ax_default image">
-        <img id="u28_img" class="img " src="images/home/u28.jpg"/>
+        <img id="u28_img" class="img " src="images/peiliang_li_-_hkust_aerial_robotics_group/u28.jpg"/>
       </div>
 
       <!-- Unnamed (Image) -->
       <div id="u29" class="ax_default image">
-        <img id="u29_img" class="img " src="images/home/u29.jpg"/>
+        <img id="u29_img" class="img " src="images/peiliang_li_-_hkust_aerial_robotics_group/u29.jpg"/>
       </div>
 
       <!-- Unnamed (Image) -->
       <div id="u30" class="ax_default image">
-        <img id="u30_img" class="img " src="images/home/u30.jpg"/>
+        <img id="u30_img" class="img " src="images/peiliang_li_-_hkust_aerial_robotics_group/u30.jpg"/>
       </div>
 
       <!-- Unnamed (Image) -->
       <div id="u31" class="ax_default image">
-        <img id="u31_img" class="img " src="images/home/u31.jpg"/>
+        <img id="u31_img" class="img " src="images/peiliang_li_-_hkust_aerial_robotics_group/u31.jpg"/>
       </div>
 
       <!-- Unnamed (Image) -->
       <div id="u32" class="ax_default image">
-        <img id="u32_img" class="img " src="images/home/u32.jpg"/>
+        <img id="u32_img" class="img " src="images/peiliang_li_-_hkust_aerial_robotics_group/u32.jpg"/>
       </div>
 
       <!-- Unnamed (Horizontal Line) -->
       <div id="u33" class="ax_default horizontal_line">
-        <img id="u33_img" class="img " src="images/home/u33.png"/>
+        <img id="u33_img" class="img " src="images/peiliang_li_-_hkust_aerial_robotics_group/u33.png"/>
       </div>
 
       <!-- Unnamed (Horizontal Line) -->
       <div id="u34" class="ax_default horizontal_line">
-        <img id="u34_img" class="img " src="images/home/u34.png"/>
+        <img id="u34_img" class="img " src="images/peiliang_li_-_hkust_aerial_robotics_group/u34.png"/>
       </div>
 
       <!-- Unnamed (Horizontal Line) -->
       <div id="u35" class="ax_default horizontal_line">
-        <img id="u35_img" class="img " src="images/home/u34.png"/>
+        <img id="u35_img" class="img " src="images/peiliang_li_-_hkust_aerial_robotics_group/u34.png"/>
       </div>
 
       <!-- Unnamed (Horizontal Line) -->
       <div id="u36" class="ax_default horizontal_line">
-        <img id="u36_img" class="img " src="images/home/u34.png"/>
+        <img id="u36_img" class="img " src="images/peiliang_li_-_hkust_aerial_robotics_group/u34.png"/>
       </div>
 
       <!-- Unnamed (Horizontal Line) -->
       <div id="u37" class="ax_default horizontal_line">
-        <img id="u37_img" class="img " src="images/home/u34.png"/>
+        <img id="u37_img" class="img " src="images/peiliang_li_-_hkust_aerial_robotics_group/u34.png"/>
       </div>
 
       <!-- Unnamed (Rectangle) -->
@@ -266,17 +266,17 @@
 
       <!-- Unnamed (Image) -->
       <div id="u41" class="ax_default image">
-        <img id="u41_img" class="img " src="images/home/u41.jpg"/>
+        <img id="u41_img" class="img " src="images/peiliang_li_-_hkust_aerial_robotics_group/u41.jpg"/>
       </div>
 
       <!-- Unnamed (Image) -->
       <div id="u42" class="ax_default image">
-        <img id="u42_img" class="img " src="images/home/u42.jpg"/>
+        <img id="u42_img" class="img " src="images/peiliang_li_-_hkust_aerial_robotics_group/u42.jpg"/>
       </div>
 
       <!-- Unnamed (Horizontal Line) -->
       <div id="u43" class="ax_default horizontal_line">
-        <img id="u43_img" class="img " src="images/home/u34.png"/>
+        <img id="u43_img" class="img " src="images/peiliang_li_-_hkust_aerial_robotics_group/u34.png"/>
       </div>
 
       <!-- Unnamed (Rectangle) -->
@@ -329,7 +329,7 @@
 
       <!-- Unnamed (Horizontal Line) -->
       <div id="u50" class="ax_default horizontal_line">
-        <img id="u50_img" class="img " src="images/home/u33.png"/>
+        <img id="u50_img" class="img " src="images/peiliang_li_-_hkust_aerial_robotics_group/u33.png"/>
       </div>
     </div>
   </body>
