--- a/resources/chrome/chrome.html
+++ b/resources/chrome/chrome.html
@@ -31,22 +31,19 @@
         }
         .button
         {
-            background: #A502B3;
+            background: #E31687;
             font: normal 16px Arial, sans-serif;
             color: #FFFFFF;
-            padding: 10px 30px 10px 30px;
-            border: 2px solid #A502B3;
+            padding: 8px 25px 8px 25px;
+            border: 0;
             display: inline-block;
             margin-top: 10px;
             text-transform: uppercase;
-            font-size: 14px;
-	    border-radius: 4px;
+            font-size: 13px;
         }
         a:hover.button
         {
-            border: 2px solid #A502B3;
-	    color: #A502B3;
-	    background-color: #FFFFFF;
+            opacity: .8;
         }
         div.left
         {
@@ -65,7 +62,7 @@
         }
         h1
         {
-            font-size: 36px;
+            font-size: 40px;
             color: #333333;
             line-height: 50px;
             margin-bottom: 20px;
@@ -73,33 +70,30 @@
         }
         h2
         {
-            font-size: 24px;
+            font-size: 38px;
             font-weight: normal;
             color: #08639C;
             text-align: center;
         }
         h3
         {
-            font-size: 16px;
+            font-size: 20px;
             color: #333333;
             font-weight: normal;
-	    text-transform: uppercase;
         }
         .heading
         {
-            border-bottom: 1px solid black;
-	    height: 36px;
+            background-color: #cdecf9;
+            height: 36px;
             line-height: 36px;
-            font-size: 22px;
-            color: #000000;
-
+            padding-left: 20px;
+            font-size: 16px;
+            color: #666666;
         }
         span.faq
         {
             font-size: 16px;
-	    line-height: 24px;
             font-weight: normal;
-	    text-transform: uppercase;
             color: #333333;
             display: block;
         }
@@ -109,14 +103,14 @@
     <div class="container">
         <br />
         <br />
-        <img src="axure_logo.png" alt="axure" />
+        <img src="axure_logo.gif" alt="axure" />
         <br />
-	<br />
         <h1>
-            AXURE RP EXTENSION FOR CHROME</h1>
+            AXURE RP EXTENSION<br />
+            For Chrome</h1>
         <p style="font-size: 14px; color: #666666; margin-top: 10px;">
             Google Chrome requires an extension to view locally stored projects. Alternatively,
-            upload your RP file to <a href="https://share.axure.com">Axure Share</a> or use a different
+            upload your RP file to <a href="https://share.axure.com">AxShare</a> or use a different
             browser.</p>
         <h3 class="heading">
             VIEW LOCAL PROJECTS IN CHROME</h3>
@@ -130,26 +124,19 @@
         </div>
         <div class="right">
             <h3>
-                2. Open "More Tools > Extensions"</h3>
-            <img src="extensions.png" alt="extensions"/>
+                2. Open the Extensions Options</h3>
+            <img src="extensions_menu.gif" alt="extensions" />
         </div>
         <div style="clear: both; height: 20px;">
             &nbsp;</div>
-       <div class="left">
-            <h3>
-                3. View Axure RP Extension Details</h3>
-            <img src="details.png" alt="extension details"/>
-            </div>
-	<div class="right">
-            <h3>
-                4. Check "Allow access to file URLs"</h3>
-            <img src="allow-access.png" alt="allow access"/>
-        </div>
-   <div style="clear: both; height: 20px;">
-            &nbsp;</div>
         <div class="left">
             <h3>
-                5. Click the button below</h3>
+                3. Check "Allow access to file URLs"</h3>
+            <img src="allow_access.gif" alt="allow access" />
+        </div>
+        <div class="right">
+            <h3>
+                4. Click the button below</h3>
             <div class="buttonContainer">
                 <a class="button" href="../../start.html">View in Chrome</a>
             </div>
@@ -160,23 +147,25 @@
             EXTENSION FAQ</h3>
         <p>
             <span class="faq">What is a Chrome Extension?</span> Extensions are downloadable
-            plug-ins for Google Chrome that modify the browser
+            plug-ins for Google Chrome that modify the browser<br />
             and allow you additional capabilities.
         </p>
         <p style="margin-top: 25px;">
             <span class="faq">Why do I need to install the extension?</span> Google requires
-            this extension to be installed to allow the viewing of local files in
+            this extension to be installed to allow the viewing of local files in<br />
             Chrome
         </p>
         <p style="margin-top: 25px; margin-bottom: 25px;">
             <span class="faq">Why does this extension require a high access level?</span> This
-            extension requires a high access level to allow the viewing of the file://
+            extension requires a high access level to allow the viewing of the file://<br />
             protocol. Axure does not track or access any of your information.
         </p>
         <h3 class="heading">
-           WE'RE HERE TO HELP</h3>
+            ROUND UP</h3>
         <p>
-            Need help or have any questions? Contact our support team at <a href="mailto:support@axure.com">
+            Chrome requires this extension to be installed to view local files.</p>
+        <p>
+            Need help or have any questions? Drop us a line at <a href="mailto:support@axure.com">
                 support@axure.com</a>.
         </p>
         <div style="clear: both; height: 20px;">
