--- a/index.html
+++ b/index.html
@@ -402,7 +402,7 @@
         <div id="u78_div" class=""></div>
         <!-- Unnamed () -->
         <div id="u79" class="text" style="visibility: visible;">
-          <p><span style="font-family:'Arial-BoldMT', 'Arial Bold', 'Arial';font-weight:700;font-style:normal;">Peiliang Li</span><span style="font-family:'ArialMT', 'Arial';font-weight:400;font-style:normal;">, Xiaozhi Chen, Shaojie Shen</span></p><p><span style="font-family:'ArialMT', 'Arial';font-weight:400;font-style:normal;">IEEE Conference on Computer Vision and Pattern Recognition (</span><span style="font-family:'Arial-ItalicMT', 'Arial Italic', 'Arial';font-weight:400;font-style:italic;">CVPR 2019 accepted</span><span style="font-family:'ArialMT', 'Arial';font-weight:400;font-style:normal;">) </span></p>
+          <p><span style="font-family:'Arial-BoldMT', 'Arial Bold', 'Arial';font-weight:700;font-style:normal;">Peiliang Li</span><span style="font-family:'ArialMT', 'Arial';font-weight:400;font-style:normal;">, Xiaozhi Chen, Shaojie Shen</span></p><p><span style="font-family:'ArialMT', 'Arial';font-weight:400;font-style:normal;">IEEE Conference on Computer Vision and Pattern Recognition (</span><span style="font-family:'Arial-ItalicMT', 'Arial Italic', 'Arial';font-weight:400;font-style:italic;">CVPR 2019</span><span style="font-family:'ArialMT', 'Arial';font-weight:400;font-style:normal;">) </span></p>
         </div>
       </div>
 
@@ -416,20 +416,20 @@
       </div>
 
       <!-- Unnamed (Rectangle) -->
-      <div id="u82" class="ax_default paragraph">
+      <div id="u82" class="ax_default heading_2">
         <div id="u82_div" class=""></div>
         <!-- Unnamed () -->
         <div id="u83" class="text" style="visibility: visible;">
-          <p><span>Code will be released soon.</span></p>
+          <p><span>News</span></p>
         </div>
       </div>
 
       <!-- Unnamed (Rectangle) -->
-      <div id="u84" class="ax_default heading_2">
+      <div id="u84" class="ax_default paragraph">
         <div id="u84_div" class=""></div>
         <!-- Unnamed () -->
         <div id="u85" class="text" style="visibility: visible;">
-          <p><span>News</span></p>
+          <p><span style="font-family:'Arial-BoldMT', 'Arial Bold', 'Arial';font-weight:700;">&#149;&nbsp; </span><span style="font-family:'ArialMT', 'Arial';font-weight:400;">[Feb 2019]&nbsp; One paper accepted by CVPR 2019.</span></p>
         </div>
       </div>
 
@@ -438,39 +438,52 @@
         <div id="u86_div" class=""></div>
         <!-- Unnamed () -->
         <div id="u87" class="text" style="visibility: visible;">
-          <p><span style="font-family:'Arial-BoldMT', 'Arial Bold', 'Arial';font-weight:700;">&#149;&nbsp; </span><span style="font-family:'ArialMT', 'Arial';font-weight:400;">[Feb 2019]&nbsp; One paper accepted by CVPR 2019.</span></p>
-        </div>
-      </div>
-
-      <!-- Unnamed (Rectangle) -->
-      <div id="u88" class="ax_default paragraph">
-        <div id="u88_div" class=""></div>
-        <!-- Unnamed () -->
-        <div id="u89" class="text" style="visibility: visible;">
           <p><span style="font-family:'Arial-BoldMT', 'Arial Bold', 'Arial';font-weight:700;">&#149;&nbsp; </span><span style="font-family:'ArialMT', 'Arial';font-weight:400;">[Jan 2019]&nbsp; I will intern at Apple AI research team during 2019 summer.</span></p>
         </div>
       </div>
 
       <!-- Unnamed (Horizontal Line) -->
-      <div id="u90" class="ax_default horizontal_line">
-        <img id="u90_img" class="img " src="images/peiliang_li_-_hkust_aerial_robotics_group/u56.png"/>
+      <div id="u88" class="ax_default horizontal_line">
+        <img id="u88_img" class="img " src="images/peiliang_li_-_hkust_aerial_robotics_group/u56.png"/>
         <!-- Unnamed () -->
-        <div id="u91" class="text" style="display: none; visibility: hidden">
+        <div id="u89" class="text" style="display: none; visibility: hidden">
           <p><span></span></p>
         </div>
       </div>
 
       <!-- Unnamed (Rectangle) -->
-      <div id="u92" class="ax_default paragraph">
-        <div id="u92_div" class=""></div>
+      <div id="u90" class="ax_default paragraph">
+        <div id="u90_div" class=""></div>
         <!-- Unnamed () -->
-        <div id="u93" class="text" style="visibility: visible;">
+        <div id="u91" class="text" style="visibility: visible;">
           <p><span style="font-family:'Arial-BoldMT', 'Arial Bold', 'Arial';font-weight:700;">&#149;&nbsp; </span><span style="font-family:'ArialMT', 'Arial';font-weight:400;">[Apr 2019]&nbsp; Our journal paper </span><span style="font-family:'ArialMT', 'Arial';font-weight:400;color:#5A95BC;">VINS-Mono</span><span style="font-family:'ArialMT', 'Arial';font-weight:400;"> received the Honorable Mention for the 2018 IEEE T-RO Best Paper award!</span></p>
         </div>
       </div>
 
       <!-- Unnamed (Hot Spot) -->
-      <div id="u94" class="ax_default">
+      <div id="u92" class="ax_default">
+      </div>
+
+      <!-- Unnamed (Rectangle) -->
+      <div id="u93" class="ax_default paragraph">
+        <div id="u93_div" class=""></div>
+        <!-- Unnamed () -->
+        <div id="u94" class="text" style="visibility: visible;">
+          <p><span style="font-family:'Arial-BoldMT', 'Arial Bold', 'Arial';font-weight:700;">&#149;&nbsp; </span><span style="font-family:'ArialMT', 'Arial';font-weight:400;">[Apr 2019]&nbsp; The code of Stereo R-CNN is released </span><span style="font-family:'ArialMT', 'Arial';font-weight:400;color:#5A95BC;">here</span><span style="font-family:'ArialMT', 'Arial';font-weight:400;">!</span></p>
+        </div>
+      </div>
+
+      <!-- Unnamed (Hot Spot) -->
+      <div id="u95" class="ax_default">
+      </div>
+
+      <!-- Unnamed (Rectangle) -->
+      <div id="u96" class="ax_default paragraph">
+        <div id="u96_div" class=""></div>
+        <!-- Unnamed () -->
+        <div id="u97" class="text" style="visibility: visible;">
+          <p><span>Code</span></p>
+        </div>
       </div>
     </div>
   </body>
