--- a/index.html
+++ b/index.html
@@ -569,6 +569,15 @@
           <p><span></span></p>
         </div>
       </div>
+
+      <!-- Unnamed (Rectangle) -->
+      <div id="u117" class="ax_default paragraph">
+        <div id="u117_div" class=""></div>
+        <!-- Unnamed () -->
+        <div id="u118" class="text" style="visibility: visible;">
+          <p><span style="font-family:'Arial-BoldMT', 'Arial Bold', 'Arial';font-weight:700;">&#149;&nbsp; </span><span style="font-family:'ArialMT', 'Arial';font-weight:400;">[Feb 2020]&nbsp; One paper about 3D object tracking is accepted by CVPR 2020.</span></p>
+        </div>
+      </div>
     </div>
   </body>
 </html>
